--- a/src/app/component/customer.component.html
+++ b/src/app/component/customer.component.html
@@ -1,10 +1,13 @@
 <div class="container">
   <ag-grid-angular
+  #agGrid
     style="width: 100%; height: 100%;"
     class="ag-theme-balham"
     [pagination]="true"
     [rowData]="customers | async"
     [columnDefs]="columnDefs"
+    (gridReady)="onGridReady($event)"
+    (cellClicked)="onCellClicked($event)"
   >
   </ag-grid-angular>
 </div>
