--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'ag-grid-community/dist/styles/ag-grid.css';
 @import 'ag-grid-community/dist/styles/ag-theme-balham.css';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 html, body {
   height: 100%;
   margin: 0;
+}
+
+h1 {
+  text-align: center;
 }
