Finally made it working wiht bare minimum

--- a/src/app/component/customer.component.html
+++ b/src/app/component/customer.component.html
@@ -8,6 +8,7 @@
     [columnDefs]="columnDefs"
     (gridReady)="onGridReady($event)"
     (cellClicked)="onCellClicked($event)"
+    (cellValueChanged)="onCellValueChanged($event)"
   >
   </ag-grid-angular>
 </div>
