--- a/src/app/component/note.component.css
+++ b/src/app/component/note.component.css
@@ -1,3 +1,12 @@
+mat-form-field {
+  flex-grow: 1;
+  margin: 2px;
+}
+
+.full-width-button {
+  width: 100%;
+}
+
 .customer-info {
   display: flex;
   flex-direction: column;
